merged, organized and optimized code from Doha, the UI for the 2nd Question note: there is some todos not done